# Raw32Converter

./: .gitignore  CMakeLists.txt  raw32Converter.js  videoToRaw.js
Raw32Converter/: CMakeLists.txt  main.c  main.cpp  raw32converter.c  raw32converter.cpp  raw32converter.h
